added new files

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,15 @@
 body{
     background-color: blue;
 }
-.whatthehelpuswith{
+.whattheycando{
+    background-color: yellow;
+}
+.whatidogshelpuswith{
     background-color: chartreuse;
 }
-.whattheycando{
+.whatdogsdoforhumans{
     background-color: crimson;
 }
-.whattheycandoforus{
+.whyilikedogs{
     background-color: darkorange;
 }
