--- a/assets/css/whattheycando.css
+++ b/assets/css/whattheycando.css
@@ -2,7 +2,7 @@ body{
     background-color: blue;
 }
 .whatheycando{
-    background-color: chartreuse;
+    background-color: yellow;
 }
 .theircapabilities{
     background-color: darkorange;
